<resources>
    <string name="SignatureMismatch">The new version is signed with a different key to the old one. To install the new version, the old one must be uninstalled first. Please do this and try again. (Note that uninstalling will erase any internal data stored by the application)</string>
    <string name="installIncompatible">It seems like this package is not compatible with your device. Do you want to try and install it anyway?</string>
    <string name="installDowngrade">You are trying to downgrade this application. Doing so might get it to malfunction and even lose your data. Do you want to try and downgrade it anyway?</string>
    <string name="version">Version</string>
    <string name="delete">Delete</string>
    <string name="cache_downloaded">Keep cached apps</string>
    <string name="updates">Updates</string>
    <string name="unstable_updates">Unstable updates</string>
    <string name="unstable_updates_summary">Suggest updates to unstable versions</string>
    <string name="other">Other</string>
    <string name="update_interval">Automatic update interval</string>
    <string name="update_interval_zero">No automatic app list updates</string>
    <string name="automatic_scan_wifi">Only on Wi-Fi</string>
    <string name="automatic_scan_wifi_on">Only update automatically on unmetered networks like Wi-Fi</string>
    <string name="update_auto_download">Automatically download updates</string>
    <string name="update_auto_download_summary">Download the update files in the background</string>
    <string name="update_auto_install">Automatically install updates</string>
    <string name="update_auto_install_summary">Download and install update apps in the background</string>
    <string name="notify">Update notifications</string>
    <string name="notify_on">Show a notification when updates are available</string>
    <string name="update_history">Update history</string>
    <string name="update_history_summ">Days to consider apps new or recent: %s</string>
    <string name="system_installer">Privileged Extension</string>
    <string name="system_installer_on">Use F-Droid Privileged Extension to install, update, and remove packages</string>
    <string name="login_title">Authentication required</string>
    <string name="login_name">Username</string>
    <string name="login_password">Password</string>
    <string name="repo_edit_credentials">Change Password</string>
    <string name="repo_error_empty_username">Empty username, credentials not changed</string>
    <string name="app_details">App Details</string>
    <string name="no_such_app">No such app found.</string>
    <string name="about_version">Version</string>
    <string name="about_source">Source code</string>
    <string name="about_mail">Email</string>
    <string name="about_license">License</string>
    <string name="app_incompatible">Incompatible</string>
    <string name="app_installed">Installed</string>
    <string name="app_not_installed">Not Installed</string>
    <string name="app_inst_known_source">Installed (from %s)</string>
    <string name="app_inst_unknown_source">Installed (from unknown source)</string>
    <string name="added_on">Added on %s</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="repo_add_title">Add new repository</string>
    <string name="repo_add_add">Add</string>
    <string name="links">Links</string>
    <string name="more">Read More</string>
    <string name="less">Less</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enable</string>
    <string name="add_key">Add Key</string>
    <string name="overwrite">Overwrite</string>
    <string name="tab_available_apps">Available</string>
    <string name="tab_installed_apps">Installed</string>
    <string name="tab_updates">Updates</string>
    <string name="tab_installed_apps_count">Installed (%d)</string>
    <string name="tab_updates_count">Updates (%d)</string>
    <string name="one_update_available">1 update is available.</string>
    <string name="many_updates_available">%d updates are available.</string>
    <string name="fdroid_updates_available">F-Droid Updates Available</string>
    <string name="update_notification_more">+%1$d more…</string>
    <string name="repo_add_url">Repository address</string>
    <string name="repo_add_fingerprint">Fingerprint (optional)</string>
    <string name="repo_exists_add_fingerprint">This repo is already setup, this will add new key information.</string>
    <string name="repo_exists_enable">This repo is already setup, confirm that you want to re-enable it.</string>
    <string name="repo_exists_and_enabled">The incoming repo is already setup and enabled.</string>
    <string name="repo_delete_to_overwrite">You must first delete this repo before you can add one with a different key.</string>
    <string name="bad_fingerprint">Bad fingerprint</string>
    <string name="invalid_url">This is not a valid URL.</string>
    <string name="repo_provider">Repository: %s</string>
    <string name="repo_official_mirrors">Official mirrors</string>
    <string name="repo_user_mirrors">User mirrors</string>
    <string name="repo_exists_add_mirror">This is a copy of %1$s, add it as a mirror?</string>
    <string name="repo_add_mirror">Add mirror</string>
    <string name="menu_update_repo">Update Repos</string>
    <string name="menu_update_this_repo">Update this Repo</string>
    <string name="menu_manage">Repositories</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_repo">New Repository</string>
    <string name="menu_appinfo">App Info (System Settings)</string>
    <string name="menu_launch">Run</string>
    <string name="menu_share">Share</string>
    <string name="menu_install">Install</string>
    <string name="menu_uninstall">Uninstall</string>
    <string name="menu_ignore_all">Ignore All Updates</string>
    <string name="menu_ignore_this">Ignore This Update</string>
    <string name="menu_website">Website</string>
    <string name="menu_email">E-Mail Author</string>
    <string name="menu_issues">Issues</string>
    <string name="menu_changelog">Changelog</string>
    <string name="menu_source">Source Code</string>
    <string name="menu_upgrade">Upgrade</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_bitcoin">Bitcoin</string>
    <string name="menu_litecoin">Litecoin</string>
    <string name="menu_flattr">Flattr</string>
    <string name="details_installed">Version %s installed</string>
    <string name="details_notinstalled">Not installed</string>
    <string name="details_new_in_version">New in version %s</string>
    <string name="antiadslist">This app contains advertising</string>
    <string name="antitracklist">This app tracks and reports your activity</string>
    <string name="antinonfreeadlist">This app promotes non-free add-ons</string>
    <string name="antinonfreenetlist">This app promotes non-free network services</string>
    <string name="antinonfreedeplist">This app depends on other non-free apps</string>
    <string name="antiupstreamnonfreelist">The upstream source code is not entirely Free</string>
    <string name="antinonfreeassetslist">This app contains non-free assets</string>
    <string name="antidisabledalgorithmlist">This app has a weak security signature</string>
    <string name="antiknownvulnlist">This app contains a known security vulnerability</string>
    <string name="antinosourcesince">The source code is no longer available, no updates possible.</string>
    <string name="display">Display</string>
    <string name="expert">Expert mode</string>
    <string name="expert_on">Show extra info and enable extra settings</string>
    <string name="search_hint">Search applications</string>
    <string name="appcompatibility">Application compatibility</string>
    <string name="show_incompat_versions">Incompatible versions</string>
    <string name="show_incompat_versions_on">Show app versions incompatible with the device</string>
    <string name="rooted">Ignore root</string>
    <string name="rooted_on">Do not grey out apps requiring root privileges</string>
    <string name="hide_anti_feature_apps">Grey out anti-feature apps</string>
    <string name="hide_anti_feature_apps_on">Grey out apps requiring anti-features</string>
    <string name="ignoreTouch">Ignore touchscreen</string>
    <string name="ignoreTouch_on">Always include apps that require touchscreen</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="useTor">Use Tor</string>
    <string name="useTorSummary">Force download traffic through Tor for increased privacy</string>
    <string name="proxy">Proxy</string>
    <string name="enable_proxy_title">Enable HTTP Proxy</string>
    <string name="enable_proxy_summary">Configure HTTP Proxy for all network requests</string>
    <string name="proxy_host">Proxy Host</string>
    <string name="proxy_host_summary">Configure your proxy\'s hostname (e.g. 127.0.0.1)</string>
    <string name="proxy_port">Proxy Port</string>
    <string name="proxy_port_summary">Configure your proxy\'s port number (e.g. 8118)</string>
    <string name="status_download">Downloading\n%2$s / %3$s (%4$d%%) from\n%1$s</string>
    <string name="status_download_unknown_size">Downloading\n%2$s from\n%1$s</string>
    <string name="update_notification_title">Updating repositories</string>
    <string name="status_processing_xml_percent">Processing %2$s / %3$s (%4$d%%) from %1$s</string>
    <string name="status_connecting_to_repo">Connecting to\n%1$s</string>
    <string name="status_inserting_apps">Saving application details</string>
    <string name="status_inserting_x_apps">Saving app details (%1$d/%2$d) from %3$s</string>
    <string name="repos_unchanged">All repositories are up to date</string>
    <string name="all_other_repos_fine">All other repos didn\'t create errors.</string>
    <string name="global_error_updating_repos">Error during update: %s</string>
    <string name="warning_no_internet">Cannot update, are you connected to the internet?</string>
    <string name="no_permissions">No permissions are used.</string>
    <string name="permissions">Permissions</string>
    <string name="no_handler_app">You don\'t have any available app that can handle %s.</string>
    <string name="theme">Theme</string>
    <string name="unsigned">Unsigned</string>
    <string name="unverified">Unverified</string>
    <string name="repo_details">Repository</string>
    <string name="repo_url">Address</string>
    <string name="repo_num_apps">Number of apps</string>
    <string name="repo_fingerprint">Fingerprint of the signing key (SHA-256)</string>
    <string name="repo_description">Description</string>
    <string name="repo_last_update">Last update</string>
    <string name="repo_name">Name</string>
    <string name="repo_not_yet_updated">This repository has not been used yet.
        You need to enable it to view the apps it provides.</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_in_system_settings">Available in System Settings</string>
    <string name="qr_code">QR-Code</string>
    <string name="screenshots_on_demand">Load screenshots on demand</string>
    <string name="screenshots_pref_summary">Requires an extra click before starting to fetch screenshots</string>
    <string name="disable_pull_to_refresh">Disable Pull To Refresh Gesture</string>
    <string name="clear_cache_summary">Removes and re-downloads all app information.</string>
    <string name="clear_cache">Clear Cache and Reload</string>
</resources>